deploy/sas-bases/overlays/network/route.openshift.io/v1/route/components/sas-data-mining-results/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-dataMiningResults
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-data-mining-results
    sas.com/admin: namespace
  name: sas-data-mining-results
spec:
  host: $(INGRESS_HOST)
  path: /dataMiningResults
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-data-mining-results
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-dataMiningResults
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-data-mining-results
    sas.com/admin: namespace
  name: sas-data-mining-results-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /dataMiningResults
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-data-mining-results
  wildcardPolicy: Subdomain

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-dataMiningWarehouse
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-data-mining-warehouse
    sas.com/admin: namespace
  name: sas-data-mining-warehouse
spec:
  host: $(INGRESS_HOST)
  path: /dataMiningWarehouse
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-data-mining-warehouse
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-dataMiningWarehouse
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-data-mining-warehouse
    sas.com/admin: namespace
  name: sas-data-mining-warehouse-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /dataMiningWarehouse
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-data-mining-warehouse
  wildcardPolicy: Subdomain
